summative.moria.Moria.scala.error
Erreur de compilation :
Moria:22: error: illegal start of statement (no modifiers allowed here)
override def run() {
^